--- a/css/local-style.css
+++ b/css/local-style.css
@@ -10,7 +10,7 @@ body {
     text-transform: uppercase; /* редкое явление */
 
     background-color: #000000; /* подстраховываем картинку */
-    background-image: url('../img/ha_bar-bg.jpg');
+    background-image: url('../img/index-bg.jpg');
     background-position: top center;
     background-repeat: no-repeat;
 }
@@ -24,7 +24,8 @@ img {
     height: auto;
 }
 
-/* .visually-hidden:not(:focus):not(:active),
+/* служебный класс */
+.visually-hidden:not(:focus):not(:active),
 input[type="checkbox"].visually-hidden,
 input[type="radio"].visually-hidden {
     position: absolute;
@@ -36,9 +37,17 @@ input[type="radio"].visually-hidden {
     border: 0;
 
     white-space: nowrap;
-} */
+
+    clip-path: inset(100%);
+    clip: rect(0 0 0 0);
+    overflow: hidden;
+}
 
 .button {
+    display: inline-block;
+    margin-right: 16px; /* в макете 20px, но учесть отступы между инлайн-блоками */
+    padding: 10px 30px;
+
     font: inherit; /* нужно для кнопок и ссылок */
     text-align: center;
     color: white;
@@ -55,12 +64,22 @@ input[type="radio"].visually-hidden {
     background-color: #663d15;
 }
 
+/* первый для ссылок, второй для кнопок*/
+.button.disabled, 
+.button:disabled {
+    cursor: default;
+    opacity: 0.5;
+    background-color: #000000;
+}
+
+.main-header {
+    margin-bottom: 75px;
+}
+
 .main-navigation {
     font-size: 16px;
     line-height: 20px;
     color: #ffffff;
-
-    background-color: #000000; /* страхуем */
 
     /* сетка */
     display: flex;
@@ -93,11 +112,16 @@ input[type="radio"].visually-hidden {
 }
 
 .site-navigation {
+    display: flex;
+    flex-wrap: wrap;
     width: 620px;
+
+    background-color: #000000; /* страхуем */
 }
 
 .user-navigation {
-    width: 148px;
+    display: flex;
+    max-width: 140px;
 }
 
 .site-navigation,
@@ -110,7 +134,39 @@ input[type="radio"].visually-hidden {
 
 .site-navigation a,
 .user-navigation a {
+    display: block;
+    padding: 25px 20px;
+
+    vertical-align: middle;
     color: #ffffff;
+}
+
+.user-navigation .login-link {
+    position: relative;
+    padding-left: 50px;
+}
+
+.login-link::before {
+    content: "";
+
+    position: absolute;
+    top: 27px;
+    left: 24px;
+
+    background-image: url("../svg/login.svg");
+    background-repeat: no-repeat;
+    background-position: 0 0;
+
+    width: 16px; /* в макете ширина и высота по 14, */
+    height: 18px; /* учитываются невидимые отступы */
+
+    opacity: 0.3;
+}
+
+.login-link:hover::before,
+.login-link:focus::before, 
+.login-link:active::before {
+    opacity: 1;
 }
 
 .site-navigation a:hover,
@@ -141,17 +197,44 @@ input[type="radio"].visually-hidden {
 }
 
 .feature-item h3 {
+    position: relative;
+
+    margin: 0;
+    margin-bottom: 60px;
+
     font-size: 30px;
     line-height: 42px;
+}
+
+.feature-item h3::after {
+    content: "";
+
+    position: absolute;
+    bottom: -30px;
+    left: 50%; /* центровка горизонтальная */
+
+    width: 20px;
+    height: 20px;
+    margin-left: -10px; /* центровка горизонтальная */
+
+    background-color: #fff;
+
+    transform: rotate(45deg);
+}
+
+.feature-item p {
+    margin: 0 10px;
 }
 
 .index-columns {
     color: #000000;
 
     background-color: #f8f5f2; /* страховка */
-    background-image: url('../img/pattern-light.jpg'); /* извлечь часть фона в макете pattern-light.jpg*/
-    background-position: 0 0;
-    background-repeat: repeat;
+    background-image: 
+        url("../img/vertical-line.png"),
+        url("../img/pattern-light.jpg");
+    background-position: center, 0 0;
+    background-repeat: no-repeat, repeat;
 
     /* сетка */
     display: flex;
@@ -161,6 +244,9 @@ input[type="radio"].visually-hidden {
 }
 
 .index-columns h2 {
+    margin: 0;
+    margin-bottom: 25px;
+
     font-size: 30px;
     line-height: 42px;
 }
@@ -170,7 +256,19 @@ input[type="radio"].visually-hidden {
 }
 
 .news-list {
+    margin: 0;
+    margin-bottom: 25px;
+    padding: 0;
+
     list-style: none;
+}
+
+.news-item {
+    margin-bottom: 25px;
+}
+
+.news-item p {
+    margin: 0;
 }
 
 .news-item time {
