--- a/css/local-style.css
+++ b/css/local-style.css
@@ -86,21 +86,44 @@ input[type="radio"].visually-hidden {
     margin-bottom: 75px;
 }
 
-.main-navigation {
-    font-size: 16px;
-    line-height: 20px;
-    color: #ffffff;
+.inner-page .main-header {
+    margin-bottom: 50px;
+    background-color: #000000;
+}
 
+.main-navigation {
     /* сетка */
     display: flex;
     flex-direction: column;
     align-items: center;
+
+    font-size: 16px;
+    line-height: 20px;
+    color: #ffffff;
+}
+
+.inner-page .main-navigation {
+    /* сетка */
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+
+    font-size: 16px;
+    line-height: 20px;
+    color: #ffffff;
 }
 
 .main-header-logo {
     order: 2;
     width: 368px;
     height: 153px;
+}
+
+.inner-page .main-header-logo {
+    order: 0;
+    width: 111px;
+    height: 24px;
+    margin-left: 20px;
 }
 
 .main-navigation-wrapper {
@@ -150,6 +173,27 @@ input[type="radio"].visually-hidden {
     color: #ffffff;
 }
 
+.site-navigation-current {
+    position: relative;
+}
+
+.site-navigation-current a {
+    cursor: default;
+}
+
+.site-navigation-current::after {
+    content: "";
+
+    position: absolute;
+    bottom: 0;
+    left: 20px;
+
+    width: 75px;
+    height: 4px;
+
+    background-color: #ffffff;
+}
+
 .user-navigation .login-link {
     position: relative;
     padding-left: 50px;
@@ -183,6 +227,10 @@ input[type="radio"].visually-hidden {
 .user-navigation a:hover,
 .user-navigation a:focus {
     background-color: #242424;
+}
+
+.site-navigation-current a:hover {
+    background-color: #000;
 }
 
 .features {
@@ -379,6 +427,51 @@ input[type="radio"].visually-hidden {
     margin-right: 0;
 }
 
+.page-title {
+    font-size: 30px;
+    line-height: 42px;
+
+    margin: 0;
+    margin-bottom: 15px;
+}
+
+.breadcrumbs {
+    display: flex;
+
+    margin: 0;
+    padding: 0;
+
+    list-style: none;
+}
+
+.breadcrumbs a {
+    color: #000;
+}
+
+.breadcrumbs li:not(:first-child) {
+    margin-left: 40px;
+
+    position: relative;
+}
+
+.breadcrumbs li:not(:first-child)::before {
+    content: "";
+
+    position: absolute;
+    left: -23px;
+    top: 8px;
+
+    width: 8px;
+    height: 8px;
+
+    background-color: #000;
+    transform: rotate(45deg);
+}
+
+.breadcrumbs-current {
+    color: #aba9a7;
+}
+
 .inner-content {
     margin-bottom: 75px;
 }
@@ -465,7 +558,7 @@ input[type="radio"].visually-hidden {
 }
 
 .custom-list-1 li::before {
-content: "";
+    content: "";
 
     position: absolute;
     top: 8px;
@@ -508,6 +601,11 @@ content: "";
     margin-top: 0;
 }
 
+.inner-column-left *:last-child,
+.inner-column-right *:last-child {
+    margin-bottom: 0;
+}
+
 .inner-columns > h3:first-child {
     width: 460px;
     margin-top: 0;
@@ -525,6 +623,18 @@ content: "";
     margin-top: 65px;
     padding: 60px 0;
 }
+
+.inner-page .main-footer {
+    margin-top: 45px;
+    
+    background-image: 
+    linear-gradient( to bottom, black, transparent),
+    url("../img/pattern-dark.jpg");
+    background-size: 10px 40px, auto;
+    background-position: 0 0;
+    background-repeat: repeat-x, repeat;
+}
+
 
 .main-footer .container {
     display: flex;
