--- a/css/local-style.css
+++ b/css/local-style.css
@@ -1,3 +1,35 @@
+@keyframes bounce {
+    0% {
+        transform: translateY(-2000px);
+    }
+
+    70% {
+        transform: translateY(30px);
+    }
+
+    90% {
+        transform: translateY(-10px);
+    }
+
+    100% {
+        transform: translateY(0);
+    }
+}
+
+@keyframes shake {
+    0%, 100% {
+        transform: translateX(0);
+    }
+
+    10%, 30%, 50%, 70%, 90% {
+        transform: translateX(-10px);
+    }
+    
+    20%, 40%, 60%, 80% {
+        transform: translateX(10px);
+    }
+}
+
 body {
     min-width: 960px;
     margin: 0;
@@ -128,6 +160,7 @@ input[type="radio"].visually-hidden {
 
 .main-navigation-wrapper {
     width: 100%;
+    min-height: 70px;
     margin-bottom: 60px;
 
     background-color: #000000;
@@ -154,7 +187,7 @@ input[type="radio"].visually-hidden {
 
 .user-navigation {
     display: flex;
-    max-width: 140px;
+    /* max-width: 140px; */
 }
 
 .site-navigation,
@@ -735,12 +768,13 @@ input[type="radio"].visually-hidden {
     box-shadow: 0 30px 50px rgba(0, 0, 0, 0.7);
 }
 
+
 .modal-login {
     top: 120px;
     left: 50%; /* выравнивание по центру */
-
+    
     display: none; /* скрытие по умолчанию */
-
+    
     width: 300px;
     margin-left: -230px; /* выравнивание по центру */
     padding: 50px 80px;
@@ -799,11 +833,6 @@ input[type="radio"].visually-hidden {
 .modal-close:after {
     transform: rotate(-45deg);
 }
-
-/* .modal h2 {
-    font-size: 30px;
-    line-height: 42px;
-} */
 
 .login-form input[type="text"],
 .login-form input[type="password"] {
@@ -929,4 +958,13 @@ input[type="radio"].visually-hidden {
 
 .modal-map p {
     margin: 0;
+}
+
+.modal-show {
+    display: block;
+    animation: bounce 0.6s;
+}
+
+.modal-error {
+    animation: shake 0.6s;
 }
