--- a/css/local-style.css
+++ b/css/local-style.css
@@ -972,3 +972,8 @@ input[type="radio"].visually-hidden {
 .modal-error {
     animation: shake 0.6s;
 }
+
+.video-test {
+    width: 901px;
+    margin: 10px auto;
+}
